syntax = "proto3";

package api.v1.dealer;

option go_package = "g38_lottery_service/internal/generated/api/v1/dealer";

import "google/protobuf/timestamp.proto";

// BallType 代表球的類型
enum BallType {
  BALL_TYPE_UNSPECIFIED = 0;
  BALL_TYPE_REGULAR = 1;    // 常規球
  BALL_TYPE_EXTRA = 2;      // 額外球
  BALL_TYPE_JACKPOT = 3;    // Jackpot球
  BALL_TYPE_LUCKY = 4;      // 幸運號碼球
}

// Ball 代表一顆球
message Ball {
  // number 球號
  int32 number = 1;
  
  // type 球類型
  BallType type = 2;
  
  // is_last 是否是該類型中的最後一顆球
  bool is_last = 3;
  
  // timestamp 抽取時間
  google.protobuf.Timestamp timestamp = 4;
}

// ExtraBallSide 額外球選邊
enum ExtraBallSide {
  EXTRA_BALL_SIDE_UNSPECIFIED = 0;
  EXTRA_BALL_SIDE_LEFT = 1;
  EXTRA_BALL_SIDE_RIGHT = 2;
}

// ExtraBallRequest 抽取額外球的請求
message ExtraBallRequest {
  // ball_type 球類型
  string ball_type = 1;
} 